1、添加频谱控件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.module.mp3recorddemo.com.module.mp3recorder.MainActivity">
+        <activity android:name="com.module.mp3recorder.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
