--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':mp3recorderlib')
-//    implementation 'com.github.chezi008:AndroidMp3Recorder:v1.0.0'
+//    implementation 'com.ibbhub.audio:mp3recorderlib:1.0.1'
 }
