--- a/mp3recorderlib/build.gradle
+++ b/mp3recorderlib/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
-
+    compileSdkVersion 28
+    buildToolsVersion "29.0.0"
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 27
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -13,10 +13,8 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11"
+                abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
             }
-        }
-        ndk {
-            abiFilters "armeabi-v7a","x86","x86_64","arm64-v8a"
         }
     }
 
@@ -39,10 +37,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
