--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.github.chezi008:AndroidMp3Recorder:v1.0.4'
-
+//    implementation 'com.github.chezi008:AndroidMp3Recorder:v1.0.4'
+    implementation project(path: ':lamemp3')
 //    implementation project(':mp3recorderlib')
+    implementation project(path: ':mp3recorderlib')
 //    implementation 'com.ibbhub.audio:mp3recorderlib:1.0.8'
 }
