--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.chezi008.mp3recorddemo"
         minSdkVersion 18
-        targetSdkVersion 28
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,8 +29,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 //    implementation 'com.github.chezi008:AndroidMp3Recorder:v1.0.4'
-    implementation project(path: ':lamemp3')
-//    implementation project(':mp3recorderlib')
+//    implementation project(path: ':lamemp3')
     implementation project(path: ':mp3recorderlib')
-//    implementation 'com.ibbhub.audio:mp3recorderlib:1.0.8'
 }
