--- a/mp3recorderlib/build.gradle
+++ b/mp3recorderlib/build.gradle
@@ -34,6 +34,7 @@ android {
             jniLibs.srcDir 'libs'
         }
     }
+
     packagingOptions {
         pickFirst 'lib/armeabi-v7a/libmp3lame.so'
         pickFirst 'lib/arm64-v8a/libmp3lame.so'
@@ -53,5 +54,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    implementation project(path: ':lamemp3')
+//    implementation project(path: ':lamemp3')
 }
