--- a/recorder-audio/build.gradle
+++ b/recorder-audio/build.gradle
@@ -1,20 +1,31 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
     defaultConfig {
-        applicationId "com.chezi008.mp3recorddemo"
         minSdkVersion 18
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11"
+//                abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a"
+            }
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
         }
     }
 
@@ -25,9 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation project(path: ':recorder-audio')
-    //    implementation 'com.github.chezi008:AndroidMp3Recorder:v1.0.4'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
 //    implementation project(path: ':lamemp3')
 }
