--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':mp3recorderlib'
+include ':app', ':recorder-audio'
 
 //include ':lamemp3'
 //project(":lamemp3").projectDir = file("./Lame/LameMP3/CMake")
